@@ -55,6 +55,7 @@ import com.zimbra.cs.util.AccountUtil.AccountAddressMatcher;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -167,14 +168,14 @@ public class CalendarCollection extends Collection {
   }
 
   protected Map<String, String> getUidToHrefMap(java.util.Collection<String> hrefs) {
-    HashMap<String, String> uidmap = new HashMap<String, String>();
+    HashMap<String, String> uidmap = new HashMap<>();
     for (String href : hrefs) {
       try {
         int start = href.lastIndexOf('/') + 1;
         int end = href.lastIndexOf(".ics");
         if ((start >= 0) && (end > start)) {
           String uid = href.substring(start, end);
-          uid = URLDecoder.decode(uid, "UTF-8");
+          uid = URLDecoder.decode(uid, StandardCharsets.UTF_8);
           if (start > 0 && end > 0 && end > start) {
             uidmap.put(uid, href);
           }
@@ -193,7 +194,7 @@ public class CalendarCollection extends Collection {
   private static final HashSet<QName> sMetaProps;
 
   static {
-    sMetaProps = new HashSet<QName>();
+    sMetaProps = new HashSet<>();
     sMetaProps.add(DavElements.E_GETETAG);
     sMetaProps.add(DavElements.E_RESOURCETYPE);
     sMetaProps.add(DavElements.E_DISPLAYNAME);
@@ -214,7 +215,7 @@ public class CalendarCollection extends Collection {
       throws ServiceException, DavException {
     Mailbox mbox = getCalendarMailbox(ctxt);
 
-    HashMap<String, DavResource> appts = new HashMap<String, DavResource>();
+    HashMap<String, DavResource> appts = new HashMap<>();
     ctxt.setCollectionPath(getUri());
     if (range == null) range = new TimeRange(getOwner());
     long start = range.getStart();
@@ -241,11 +242,11 @@ public class CalendarCollection extends Collection {
     Map<String, String> uidmap = getUidToHrefMap(hrefs);
     Mailbox mbox = getCalendarMailbox(ctxt);
 
-    ArrayList<DavResource> appts = new ArrayList<DavResource>();
+    ArrayList<DavResource> appts = new ArrayList<>();
     ctxt.setCollectionPath(getUri());
     Map<String, CalendarItem> calItems =
         mbox.getCalendarItemsByUid(
-            ctxt.getOperationContext(), new ArrayList<String>(uidmap.keySet()));
+            ctxt.getOperationContext(), new ArrayList<>(uidmap.keySet()));
     for (String uid : calItems.keySet()) {
       CalendarItem calItem = calItems.get(uid);
       if (calItem == null) appts.add(new DavResource.InvalidResource(uidmap.get(uid), getOwner()));
@@ -267,7 +268,7 @@ public class CalendarCollection extends Collection {
   private String findEventUid(List<Invite> invites) throws DavException {
     String uid = null;
     MailItem.Type itemType = null;
-    LinkedList<Invite> inviteList = new LinkedList<Invite>();
+    LinkedList<Invite> inviteList = new LinkedList<>();
     for (Invite i : invites) {
       MailItem.Type mItemType = i.getItemType();
       if (mItemType == MailItem.Type.APPOINTMENT) {
@@ -485,7 +486,7 @@ public class CalendarCollection extends Collection {
         try {
           MailItem mailItem =
               mbox.getItemById(ctxt.getOperationContext(), itemId, MailItem.Type.UNKNOWN);
-          if (mailItem != null && mailItem instanceof CalendarItem) {
+          if (mailItem instanceof CalendarItem) {
             origCalItem = (CalendarItem) mailItem;
           }
         } catch (ServiceException se) {
@@ -557,7 +558,7 @@ public class CalendarCollection extends Collection {
       int flags = 0;
       String[] tags = null;
       List<ReplyInfo> replies = null;
-      Invite origInvites[] = null;
+      Invite[] origInvites = null;
       if (origCalItem != null) {
         flags = origCalItem.getFlagBitmask();
         tags = origCalItem.getTags();
@@ -565,7 +566,7 @@ public class CalendarCollection extends Collection {
         origInvites = origCalItem.getInvites();
       }
       SetCalendarItemData scidDefault = new SetCalendarItemData();
-      SetCalendarItemData scidExceptions[] = null;
+      SetCalendarItemData[] scidExceptions = null;
 
       int idxExceptions = 0;
       boolean first = true;
@@ -581,7 +582,7 @@ public class CalendarCollection extends Collection {
           Invite oldInv = origCalItem.getInvite(i.getRecurId());
           if (oldInv == null && i.hasRecurId()) {
             // It's a new exception instance.  Inherit from series.
-            oldInv = origCalItem.getInvite((RecurId) null);
+            oldInv = origCalItem.getInvite(null);
           }
           if (oldInv != null) {
             MimeMessage mmInv = origCalItem.getSubpartMessage(oldInv.getMailItemId());
