@@ -8,6 +8,7 @@ package com.zimbra.cs.fb;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -34,7 +35,6 @@ import com.zimbra.common.httpclient.HttpClientUtil;
 import com.zimbra.common.service.ServiceException;
 import com.zimbra.common.soap.Element;
 import com.zimbra.common.soap.MailConstants;
-import com.zimbra.common.soap.SoapFaultException;
 import com.zimbra.common.util.ByteUtil;
 import com.zimbra.common.util.ZimbraHttpConnectionManager;
 import com.zimbra.common.util.ZimbraLog;
@@ -55,8 +55,8 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
 
     public RemoteFreeBusyProvider(HttpServletRequest httpReq, ZimbraSoapContext zsc,
                                   long start, long end, String exApptUid) {
-        mRemoteAccountMap = new HashMap<String,StringBuilder>();
-        mRequestList = new ArrayList<Request>();
+        mRemoteAccountMap = new HashMap<>();
+        mRequestList = new ArrayList<>();
         mHttpReq = httpReq;
         mSoapCtxt = zsc;
         mStart = start;
@@ -96,7 +96,7 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
 
     @Override
     public List<FreeBusy> getResults() {
-        ArrayList<FreeBusy> fbList = new ArrayList<FreeBusy>();
+        ArrayList<FreeBusy> fbList = new ArrayList<>();
         for (Request req : mRequestList) {
             HttpRequestBase method = null;
             Account acct = (Account)req.data;
@@ -108,20 +108,17 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
                 targetUrl.append("&end=").append(mEnd);
                 if (req.folder != FreeBusyQuery.CALENDAR_FOLDER_ALL)
                     targetUrl.append("&").append(UserServlet.QP_FREEBUSY_CALENDAR).append("=").append(req.folder);
-                try {
-                    if (mExApptUid != null)
-                        targetUrl.append("&").append(UserServlet.QP_EXUID).append("=").append(URLEncoder.encode(mExApptUid, "UTF-8"));
-                } catch (UnsupportedEncodingException e) {}
-                String authToken = null;
+              if (mExApptUid != null)
+                  targetUrl.append("&").append(UserServlet.QP_EXUID).append("=").append(URLEncoder.encode(mExApptUid,
+                      StandardCharsets.UTF_8));
+              String authToken = null;
                 try {
                     if (mSoapCtxt != null)
                         authToken = mSoapCtxt.getAuthToken().getEncoded();
                 } catch (AuthTokenException e) {}
                 if (authToken != null) {
                     targetUrl.append("&").append(ZimbraServlet.QP_ZAUTHTOKEN).append("=");
-                    try {
-                        targetUrl.append(URLEncoder.encode(authToken, "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {}
+                  targetUrl.append(URLEncoder.encode(authToken, StandardCharsets.UTF_8));
                 }
                 HttpClientBuilder clientBuilder = ZimbraHttpConnectionManager.getInternalHttpConnMgr().newHttpClient();
                 HttpProxyUtil.configureProxy(clientBuilder);
@@ -130,7 +127,7 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
                 try {
                     HttpResponse response =  HttpClientUtil.executeMethod(clientBuilder.build(), method);
                     byte[] buf = ByteUtil.getContent(response.getEntity().getContent(), 0);
-                    fbMsg = new String(buf, "UTF-8");
+                    fbMsg = new String(buf, StandardCharsets.UTF_8);
                 } catch (IOException | HttpException ex) {
                     // ignore this recipient and go on
                     fbMsg = null;
@@ -225,9 +222,6 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
                 } else {
                     ZimbraLog.fb.debug("Account " + idStrs[0] + " not found while searching free/busy");
                 }
-            } catch (SoapFaultException e) {
-                ZimbraLog.fb.error("cannot get free/busy for "+idStrs[0], e);
-                addFailedAccounts(response, idStrs);
             } catch (ServiceException e) {
                 ZimbraLog.fb.error("cannot get free/busy for "+idStrs[0], e);
                 addFailedAccounts(response, idStrs);
